# santaspiracy

./: README.md  main.py  pyproject.toml
assignments/: 2021.toml  2022.toml  2023.toml  2024.toml
inputs/: 2023.toml  2024.toml
