[tool.poetry]
name = "santaspiracy"
version = "0.1.0"
description = ""
authors = ["Lachlan McCalman <lachlan@mccalman.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
toml = "^0.10.2"
ipython = "^8.15.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
